DAWception rephrase selling points to avoid overflowing

--- a/dawception/style.scss
+++ b/dawception/style.scss
@@ -22,7 +22,8 @@ html {
   position: fixed;
 
   background-repeat: repeat;
-  background-size: 32px;
+  // background-size: 32px;
+  background-size: 2em;
 
   // background-size: 1.2em;
 
@@ -120,6 +121,8 @@ html {
 
     box-shadow: rgba(0, 0, 0, 0.9) 0px 8px 30px;
 
+    border-bottom: 1px solid #1E1E1E;
+
     z-index: 2;
 
     ul {
@@ -143,7 +146,7 @@ html {
           color: white;
           display: block;
           text-align: center;
-          padding: 0.5em 0.2em;
+          padding: 0.4em 0.2em;
           text-decoration: none;
           font-style: italic;
           font-weight: bold;
@@ -178,7 +181,7 @@ html {
 
   background: radial-gradient(
     circle at center,
-    rgba(0, 0, 0, 0.3) 0,
+    rgba(0, 0, 0, 0.4) 0,
     rgba(0, 0, 0, 0) 30%,
     rgba(0, 0, 0, 0) 100%
   );
@@ -209,7 +212,7 @@ html {
 #pc-img {
   width: 92.3%;
   height: 100%;
-  margin: 2em auto;
+  margin: 3em auto;
 
   $normal-shadow:  0px 0px 16px 2px white;
   box-shadow: $normal-shadow;
@@ -236,7 +239,7 @@ html {
 
   #slogan {
     width: 10em;
-    font-size: 2.7em;
+    font-size: 2.5em;
     margin: auto;
   }
 }
@@ -767,7 +770,7 @@ $feature-card-border-color: rgb(50,50,50);
                 0px 0px 14px 9px rgba(0, 0, 0, 0.6);
 
             // border: 1px solid #383838;
-            outline: 1px solid rgba(255,255,255,0.2)
+            outline: 1px solid rgb(50,50,50);
           }
     }
 
